Distinguishes between GSM & UMTS cells retrieved from ALS
This commit also
- Renames the ALS proto files
- Fixes some protobuf field identifiers
- Uses a more general Protobuf request framework
- Updates Pipfile dependencies

--- a/apple-location-services/Pipfile
+++ b/apple-location-services/Pipfile
@@ -18,4 +18,4 @@ simplekml = "*"
 python_version = "3"
 
 [scripts]
-proto = "protoc -I . --python_out=lib --pyi_out=lib core-location-als.proto"
+proto = "protoc -I . --python_out=lib/proto --pyi_out=lib/proto apple-location-services.proto"
